# CException

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  Rakefile  license.txt  makefile  meson.build  project.yml  rakefile.rb
.github/workflows/: main.yml
docs/: CException.md  CExceptionSummary.odt  license.txt  readme.txt
lib/: CException.c  CException.h  Exception.c  Exception.h  ExceptionConfig.h  meson.build
test/: CExceptionConfig.h  Exception.h  TestException.c  TestException_Runner.c
test/support/: CExceptionConfig.h
